--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   </head>
   <body>
     <h1>e-yuuki.org</h1>
+    <hr>
     <h2>Web Articles</h2>
       <h3>NetBSD</h3>
         <ul>
           <li><a href="./netbsd/pkg_install.html">pkg_installについて</a></li>
           <li><a href="./netbsd/thinkpad.html">NetBSD on ThinkPad</a></li>
+          <li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
+          <li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
         </ul>
     <h2>Papers and Presentations</h2>
       <ul>
