--- a/netbsd/thinkpad.html
+++ b/netbsd/thinkpad.html
@@ -2,6 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../css/typesetting.css">
     <title>e-yuuki.org</title>
   </head>
   <body>
