--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="#articles">Web Articles</a></li>
         <ul>
           <li><a href="#netbsd">NetBSD</a></li>
+          <li><a href="#essay">Essay</a></li>
           <li><a href="#papers">Papers and Presentations</a></li>
         </ul>
         <li><a href="#links">Links</a></li>
