--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="#articles">Web Articles</a></li>
         <ul>
           <li><a href="#netbsd">NetBSD</a></li>
+          <li><a href="#essay">Essay</a></li>
         </ul>
         <li><a href="#papers">Papers and Presentations</a></li>
         <li><a href="#links">Links</a></li>
@@ -29,6 +30,10 @@
           <li><a href="./netbsd/thinkpad.html">NetBSD on ThinkPad</a></li>
           <li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
           <li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
+        </ul>
+      <h3 id="essay">Essay</h3>
+        <ul>
+          <li><a href="./essay/webpage.html">ウェブページについて</a></li>
         </ul>
     <h2 id="papers">Papers and Presentations</h2>
       <ul>
