--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </ul>
       <h3 id="essay">Essay</h3>
         <ul>
-          <li><a href="./essay/webpage.html">ウェブページについて</a></li>
+          <li><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></li>
         </ul>
     <h2 id="papers">Papers and Presentations</h2>
       <ul>
