Update GnuPG key

--- a/index.html
+++ b/index.html
@@ -56,38 +56,100 @@
     <h2 id="gnupg">GnuPG</h2>
     <h3 id="publickey">Public Key</h3>
     <pre><code>-----BEGIN PGP PUBLIC KEY BLOCK-----
-    
+
 mQENBFpDZMQBCAC6Rs6wqlzFRf+Xw0QtKyV1GVgaX+0o38tDWw7ODKWKKg7/icQA
 oZdWDcHmr5j9fyHfJUgTq4L7b22kC+XkvXJ7zYMZhXAuK6EZ8ZAH/mu3xpMPyvoV
 zhdeBbaFhCF4Er3ti3GUTEU67SLPsPCxzpIz9J1D3yto+QkLP7IZeq27UMzNdQLp
 4g5bhtcHOsupBtbq9qgrfpvtNYbaYz51rORQeTPAURodjT+DcVh4+VJ6d8E/T7Q3
 KjmpL0nRrvIofBOPp7WwCrDl6OrgKP+lGqydXr1g+G6BE3rWwAMzzcdls/ZwQ9li
-M6IB7BP6Xpn16rwqYJbGFhPNETl/9jg82/X/ABEBAAG0H1l1dWtpIEVub21vdG8g
-PHVraUBlLXl1dWtpLm9yZz6JAVQEEwEIAD4WIQTvhIqO0cKpKr7rCQvirnFHwgkI
-dwUCWkNkxAIbAwUJA8JnAAULCQgHAgYVCAkKCwIEFgIDAQIeAQIXgAAKCRDirnFH
-wgkId16kB/4sozkhBsDss9IUWOU+3muIjADos+CefK51/jYAT9iLc8Iko8QF66Ah
-p96+32VotL3FOLLK4Xh6DMJnQDUO5zJlJ3nqI3DnXGS0pOdJPDB6WHRKeKBhFeB3
-Sz2HOnCaI+iLZmBl/yFpPj0dEd/+X1CJ3NWHYnw+B8VxC8S7uMVP2iqNtrfW3X4b
-Va9CdrBU20bCTZ3pwz7UHnc4OyJLMLABbKYfnxWTozL+BTFrni5AhYXKua0yIZQw
-xWqtZnlO9P3Z8+O+xuAdBPxq38GExaynSXVMGNY9PyK1S4k3eTubPehDU/7oPc2L
-3CxiPNa5R2RUuBis1etbPzvjiQBcOMIGuQENBFpDZMQBCACuSOKwMRP/0dUUg1y9
-YfVeNLOT9sbPBIL3TXaVZfEtj6tAHSvYgSSsNp/JMNacL5R2Kh/hIn5yc4CYv/HS
-FQUYnS89E5yRs4F8sCSkEEQ8NtCmIfOk6+5Z+Z7RyKZ2AVOlGh60qiSOgFVeDFZh
-Jz2t3+wWRM4+ruKUxOUhzlFTGJLvVjbNqsu1RlBkoTT9OV3xsXdMMj47pPH/BHmP
-cVtvAn1x155AuUz/WSPDOoZyP/lZyODTNqimccPO4bBRC+6EYHQgv+KjSbGZT/Dl
-ZdGuGgIu9q8hRioFjqJCmVqQfOBHKAzskz8zfKJKnInfiju7oAVVfD1g9EafDoTV
-Ch1dABEBAAGJATwEGAEIACYWIQTvhIqO0cKpKr7rCQvirnFHwgkIdwUCWkNkxAIb
-DAUJA8JnAAAKCRDirnFHwgkId5ExB/48EorX8JtYDi+MPXmS5Pcq/YcSd2+FwrWw
-D6/1yWdTluyedfGcKII54bxIOx9l7q3iaoMi6S6/SprjKuBuo7K7S2p1t5a7StQX
-WvsZzDiuCO+4SuQRN8/uczQu0B/wFHlAt10vQG3uO2c5t3xbsJn23WFxWOo91f+M
-wKT0U5zyeeHCfgEHhZPQZiCXTCxUiU1f0Sd9VHrBRO6wzt8MkuqA29XpOU0GtRiZ
-3vrrc78fo2NkpgbbW18MLbjF38XiVi0S6FCn0Jkx/Iuh7kynUIHA2Ray93pdor2u
-FYNlqNGf4sSVCDbISXel+WihyIM3S6WrGmN9j21a+yfWyvtsTlPA
-=51+i
------END PGP PUBLIC KEY BLOCK-----</code></pre>
+M6IB7BP6Xpn16rwqYJbGFhPNETl/9jg82/X/ABEBAAGJAVEEIAEIADsWIQTvhIqO
+0cKpKr7rCQvirnFHwgkIdwUCW5nrch0dA1VwZGF0ZSBSU0EgYml0IDIwNDggdG8g
+NDA5NgAKCRDirnFHwgkId16YB/wJUkWKab4i/hvCGXWNgD1s7f9vJFxwyrHJ1Rwu
+VB98lHEOauFCCwzGgDqXcK0eIuh+kzXBciNNIewhMGsBGtnwKPM0thW/fCuDNoGz
+5fCO0z0WayBGTIil36dApmB7XK7cM/5szGvIQ6uj1CE0H42k/v2rsfiXeeOovoW7
+nCxEo9F0hcgvrUzTdL2RzPbYglxzVoUvRV/X1CmpMur03gyLQ27goEsLJAJoBFnV
+eLhQp2DDbfzixBmE5hvw3vGFA2AJY/a2kHIe+bLFh6ko30ChChnyh9oKpPpLtvzs
+EmvetFPxvPAXiGedhj6LTOSorp1x0FQ9TW87xtteNtyxI10AtB9ZdXVraSBFbm9t
+b3RvIDx1a2lAZS15dXVraS5vcmc+iQFUBBMBCAA+FiEE74SKjtHCqSq+6wkL4q5x
+R8IJCHcFAlpDZMQCGwMFCQPCZwAFCwkIBwIGFQgJCgsCBBYCAwECHgECF4AACgkQ
+4q5xR8IJCHdepAf+LKM5IQbA7LPSFFjlPt5riIwA6LPgnnyudf42AE/Yi3PCJKPE
+BeugIafevt9laLS9xTiyyuF4egzCZ0A1DucyZSd56iNw51xktKTnSTwwelh0Snig
+YRXgd0s9hzpwmiPoi2ZgZf8haT49HRHf/l9QidzVh2J8PgfFcQvEu7jFT9oqjba3
+1t1+G1WvQnawVNtGwk2d6cM+1B53ODsiSzCwAWymH58Vk6My/gUxa54uQIWFyrmt
+MiGUMMVqrWZ5TvT92fPjvsbgHQT8at/BhMWsp0l1TBjWPT8itUuJN3k7mz3oQ1P+
+6D3Ni9wsYjzWuUdkVLgYrNXrWz8744kAXDjCBrkBDQRaQ2TEAQgArkjisDET/9HV
+FINcvWH1XjSzk/bGzwSC9012lWXxLY+rQB0r2IEkrDafyTDWnC+Udiof4SJ+cnOA
+mL/x0hUFGJ0vPROckbOBfLAkpBBEPDbQpiHzpOvuWfme0cimdgFTpRoetKokjoBV
+XgxWYSc9rd/sFkTOPq7ilMTlIc5RUxiS71Y2zarLtUZQZKE0/Tld8bF3TDI+O6Tx
+/wR5j3FbbwJ9cdeeQLlM/1kjwzqGcj/5Wcjg0zaopnHDzuGwUQvuhGB0IL/io0mx
+mU/w5WXRrhoCLvavIUYqBY6iQplakHzgRygM7JM/M3yiSpyJ34o7u6AFVXw9YPRG
+nw6E1QodXQARAQABiQE8BBgBCAAmFiEE74SKjtHCqSq+6wkL4q5xR8IJCHcFAlpD
+ZMQCGwwFCQPCZwAACgkQ4q5xR8IJCHeRMQf+PBKK1/CbWA4vjD15kuT3Kv2HEndv
+hcK1sA+v9clnU5bsnnXxnCiCOeG8SDsfZe6t4mqDIukuv0qa4yrgbqOyu0tqdbeW
+u0rUF1r7Gcw4rgjvuErkETfP7nM0LtAf8BR5QLddL0Bt7jtnObd8W7CZ9t1hcVjq
+PdX/jMCk9FOc8nnhwn4BB4WT0GYgl0wsVIlNX9EnfVR6wUTusM7fDJLqgNvV6TlN
+BrUYmd7663O/H6NjZKYG21tfDC24xd/F4lYtEuhQp9CZMfyLoe5Mp1CBwNkWsvd6
+XaK9rhWDZajRn+LElQg2yEl3pfloociDN0ulqxpjfY9tWvsn1sr7bE5TwJkCDQRb
+melPARAA0cNYiAq0hgSG5COvtHfGpA4tgK37ffRpK4OZopGPwU/5VnyzTBWdYQpP
+Dh0uUGghFmD+d4AbDjox/+4P0Mzkns6iiQtGOeBIt78Mz0riUqaKgD7ZTFj8oVTN
+34aBKfC6MIivAZf35O8YdklHCk7SnuXVHE9D8lZ7mB9AE0Ug4ggBLan3uyX6VJAh
+DY3lElvBnpX4hkWEhB6aN1lzine2yCLE0TMN1QKGF4MEsjpsE0l4vVPunEBlujiC
+BztTet9HT3touY1u8fOYDpuggovdM9dgRD7ESFbRMAADOrNqYJLDwQMe12LRh+Ly
+QZx5dr2ptpYCPwOX5911KWmgptmvAhe+5boWd++yijbxpJuZYietBEMxQXGWdWC0
+CfI7Prf1jWnFynBQnS+7h8PB/v/m7JG0AVRWyrLxJrC9MPuAcT6H3YBACqdyNxuj
+AUDfImAo1bauLeNGDUHp1XrkcYUxZpNqd6IgkUySR+/0a65N0RMaz16U0KB6iYGf
+Zxj/dt7Fx/Xc3f4JjN6/y+QwlHWBWltRb8cp3TlKMDi8h6WgUXH4H2VP+GB5F+zx
+2TdcgXUK7lwbv6UO27t01qz0tGUZWNl47YDxVHyQUkPiX2IsxD0fmUgjXYRIM9gF
+OEt7/sNWt6ATMCB7vdvbolqd935+kqt6SXwaPEnDyWKqhXybx4EAEQEAAbQvWXV1
+a2kgRW5vbW90byAoSXQgaXMgbmV3IGtleSkgPHVraUBlLXl1dWtpLm9yZz6JAk4E
+EwEIADgWIQS2hEvynNSWH1EKgSF7Tf9EI0gguAUCW5npTwIbAwULCQgHAgYVCgkI
+CwIEFgIDAQIeAQIXgAAKCRB7Tf9EI0gguEOMD/9CGoM/LkS0IUye2ZP7s6LT/i1A
+C9N2EFCY+qERnTrL5kRafBj+7u0zC2MmEUW+g454DvMRIVDmmV4GfimhYgICAseB
+bNXkDJPYr5OB/4KIA6TMQZ8jfgVyImIjYtMvno0eQjN9URvkzvBQ1j7Xjc7bEuY6
+EfFRDJX/zi3XYqvCy206JS/Tk1QZqDO7PF95k7qzG8SKl2MNtu11RealwAos5+6Y
+6Kqn4jDRq4wubTS9yvOSTyOIrg240bse3RCa4nUvcEIbecLw8+T4EDdTmP4ZBnWf
+cGakANamkUH22JIDNOwym+FLEsWPGQe1cdYYl0KvTo2XJMrz/9zo7Uej9Zv2lVDn
+K8NPBkcA2Jm1IEU96x4GfMO8xpZIgvw7VkQCNmo3DYRJ2hKW1Hd4Dh5ZdIUz5+l3
+EHq/YByqqahUwlRuXM/ymFmNKWXIS/bWAm9TFs5mJa6GG9Yqs60UKZ86ZdDswT0f
+q1B2k5GfFmj3NVqzyD6p2f3ktJJKDKAiuQANRsmZxgrYlcS+SZ/Zno0D4AsqxiLT
+c5FsxJx1oAYUDA4YcxKlCngJpRmqwn7Xuq5jeo/rfG6iHtTlv2UrLvQHsr0dUjBx
+bwPRer+zCfGGUn9MT2XYrmm8tGNtD+fRtMkkTbKRc8zIKFkB8YptkWxAm8IiK6WD
+cljb3PrpeYq+3xgr2IkBMwQQAQgAHRYhBO+Eio7RwqkqvusJC+KucUfCCQh3BQJb
+meqAAAoJEOKucUfCCQh3Cz8IAJikfki8fGxgEqTOcbCTEQKVCXb4IDlVMUmg/+rq
+thbOysg9KB6ZcJmyhDt2V/7cVRyXn0jyJgDYbg9q7n2yDNV3OPrGOu7hBVvGr0br
+dDZOhPFZwWIATuyjX73P5pOYN6Gavf7Zb2B2XVFqKXqY8Oqvz0eOPwi8bIVxbAlH
+pwO+E/4EEgENwqghL4COdAFGdlr1rwzdSUAXWVyJ8wDxOOjtG61foHs1BbAYczwC
+4SgU4mPukxC9mcUM+QIa+kivFl4JjKHq+pbRCefuTWRLEKTPBmWSeFz2+K4dxS0R
+uIrN43ALTG7jfvjhLYrSbyHauokMvI/ErwXmuJK2h3aZ6xW5Ag0EW5npTwEQALeZ
+cXyBUExpn38o3ybfEbhfBsnUjQTZCJGZL5ULBRrWYWT0gWIWqGDXEIW/tVgXVQhp
+UHL/zDZCRw4ADsRG7WvNEmaW/2v0kzTm6qkIWqJfsajTe6tY+zHDi8WMe4RBd14L
+yNGcVHeAekvGwDT6uBUpXW0JEfKqgQR4Zjs2BDV/CQclUMVj21Ve6ohzkFSjc/Ix
+h9O9cZt7NV72VSaylY3d+OBcMoz9QHxwjVwLnV/iaONmnGCVuEYPZg7/WWO0c7cm
+yc1ttKIDku+gtWokVJN2QlT778l/SalFNNv94g9i1u4ZmWAPxEJZH7slIiQjuRaQ
+l1Fy41BDxXnWfjgqi1WmVDr/IXvJEcqfCi5ZrlNDskCMS/zqgQZ2k7hCmBljKHrJ
+Mh1eNl/TRyCMV2SaYENxRydFRm4jkTPGiL3cotPzcn9s5GNtbe4RcFpa2Vuo3+aR
+t2UGnLiSGb73PT2Qv4F5EnyS55dwFbXO4c72Pwznh1mLLi/SkHYQnUxF8hqJG+Fi
+FaCdu8uEFdpGcU9bYNoRIez8rTRpve//u1uvUSsSju7K6kk1mPfhtNQAdNOWD7t3
+/ZPxitS8icIoHPlKQkKEBZtaiCb0JYvX5CAff2NIy+4rHYZpIzbCKgBX8SC9VB/q
+mEVv6PfTeeNHOurjjFD4kiptaSQPldyxluLWQbA5ABEBAAGJAjYEGAEIACAWIQS2
+hEvynNSWH1EKgSF7Tf9EI0gguAUCW5npTwIbDAAKCRB7Tf9EI0gguHZPEACiGBOg
+0jc5Hh7hSouc6a8GSVmMk3oiHJiwtxsnaJr4VkZeJtuOlUrrQczwfwlhsI6bZlnd
+ecQsq5ooHjO5BkB4SgT6Ku3q8cTs//Vf+AxKIgLKQOZBEr+n/+1QMJvACyNOsLD2
+c7TZIVXkVTQJ6aEogM6eIWDZcXRuLEBlSPT4wWAKAcgsMBBy899dx2JEpe89QFtx
+f6ksQhIPWN8JGKE3wqx3e59gx+jAKd4xjUOkbIWxJ/RetqHizyj71BBDFPVNhlqu
+wAePn4iFBxXz6w1VJVzolDDnna7CCCKsBHsVsUxgUTPkJG0HFrtNGIMTA7tku7g/
+QXJVc5H/7kWWUspsGs8jf4cn43+mzYR312Rq3TlCoBL3yvalAfwcrCzNwFzjWpwF
+UW8CVkKB2AG9+Q8W6EdVWHxCXk1Gl/QsRQPHdYvQK534oPkhFvAB6kp2yT6/gvfQ
+8p3Ua+8hcvqt0g8Y53lOlTm0EGckUofLkCovJ9ML8cmqmdZYQE6KnG3jAoaY98aI
+NLKTAjMAW0cQpSaS/gXksDi/x+8m4jyJo9VaVfjU8Cyf2/jwP9Fl3lnN7FMqTXe0
+2d7nK3T1pRIqg2+3JIA9kX/oTCxRdxQ/h61Ga6dFoFxipE8ihkclVE3KWBMAoX6h
+PWgAfkm1nr2deh0mU90RYPXehkP4RBP+uwBzgg==
+=hvwI
+-----END PGP PUBLIC KEY BLOCK-----
+</code></pre>
     <p>またはpgp.mit.eduから取得できます。</p>
     <h3 id="fingerprint">Fingerprint</h3>
-    <pre><code>EF84 8A8E D1C2 A92A BEEB  090B E2AE 7147 C209 0877</code></pre>
+    <pre><code>B684 4BF2 9CD4 961F 510A  8121 7B4D FF44 2348 20B8</code></pre>
     <hr>
     <footer>
       <address>
