--- a/introduction/openssh.html
+++ b/introduction/openssh.html
@@ -55,7 +55,14 @@ PermitEmptyPasswords no
 PasswordAuthentication yes</code></pre>設定後SSHデーモンをservice(8)のrestartかonerestartアクションで再起動する。
     <pre><code>server# service sshd onerestart</code></pre></p>
     <h2>どうしてもパスワード認証を禁止できない場合</h2>
-    レンタルサーバのような/etcの下のファイルに書き込む権限がないサービスを使うとき、公開鍵認証でログインできてもパスワード認証までは禁止できないこともある。どうしようもないので、そのサービスで利用できる最大の長さまでパスワードを長くするしかない。パスワードジェネレータは調べればいろいろなものが見つかる。
+    <p>レンタルサーバのような/etcの下のファイルに書き込む権限がないサービスを使うとき、公開鍵認証でログインできてもパスワード認証までは禁止できないこともある。どうしようもないので、そのサービスで利用できる最大の長さまでパスワードを長くするしかない。パスワードマネージャは調べればいろいろなものが見つかる。僕はBashとGnuPGで実装されたパスワードマネージャ<a href="https://github.com/drduh/pwd.sh">pwd.sh</a>を使っている。</p>
+    <h2>その他SSHログインの認証として使えるもの</h2>
+    <p><a href="https://gnupg.org">GnuPG</a>や<a href="https://web.mit.edu/kerberos/kfw-4.1/kfw-4.1/kfw-4.1-help/html/kerberos.htm">Kerberos</a>がある。</p>
+    <h2>参考文献</h2>
+    <dl>
+      <dt>Ken'ichi Fukamachi, <a href="http://www.fml.org/home/fukachan/ja/netbsd.build.pkg.openssh.html">パッケージ: openssh (Secure SHell)</a></dt>
+      <dd>本稿のオリジナルはこれ。デーモンの死活確認にservice(8)を使ったり、ed25519鍵の記述などを追加した。オリジナルのようにサーバ構築のいち手順として書いていないので記述が省略されている箇所もある。</dd>
+    </dl>
     <hr>
     <footer>
       <address>
