--- a/index.html
+++ b/index.html
@@ -1,61 +1,64 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/typesetting.css">
-    <title>e-yuuki.org</title>
-  </head>
-  <body>
-    <h1>e-yuuki.org</h1>
-    <hr>
-      <ul>
-        <li><a href="#articles">Web Articles</a></li>
-        <ul>
-          <li><a href="#netbsd">NetBSD</a></li>
-          <li><a href="#essay">Essay</a></li>
-        </ul>
-        <li><a href="#papers">Papers and Presentations</a></li>
-        <li><a href="#links">Links</a></li>
-        <li><a href="#gnupg">GnuPG</a></li>
-        <ul>
-          <li><a href="#publickey">Public Key</a></li>
-          <li><a href="#fingerprint">Fingerprint</a></li>
-        </ul>
-      </ul>
-    <h2 id="articles">Web Articles</h2>
-      <h3 id="netbsd">NetBSD</h3>
-        <ul>
-          <li><a href="./netbsd/pkg_install.html">pkg_installについて</a></li>
-          <li><a href="./netbsd/thinkpad.html">NetBSD on ThinkPad</a></li>
-          <li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
-          <li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
-        </ul>
-      <h3 id="essay">Essay</h3>
-        <ul>
-          <li><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></li>
-        </ul>
-    <h2 id="papers">Papers and Presentations</h2>
-      <ul>
-        <li>Yuuki Enomoto, <a href="./presentation/jpnetbsdbof/2018/main.pdf"> Progress of basepkg</a>,日本NetBSDユーザーグループ第二十回定期総会およびNetBSD BOF 2018</li>
-        <li>Yuuki Enomoto &amp; Ken'ichi Fukamachi, <a href="./presentation/asiabsdcon2018/main.pdf"> Design, Implementation and Operation of NetBSD Base System Packaging
-          </a>, AsiaBSDCon 2018</li>
-        <li>榎本優樹, <a href="./presentation/master/main.pdf"> NetBSD 基本システムのパッケージ化の設計と実装</a>,千歳科学技術大学, 光科学研究科, 博士前期課程, 修士論文, 2018</li>
-        <li>榎本優樹 &amp; 深町賢一, <a href="./presentation/ipsj-os2018/main.pdf"> NetBSD ベースシステムパッケージ化の実装報告</a>, 情報処理学会,システムソフトウェアとオペレーティング・システム研究会, 2018年2月研究会</li>
-        <li>Yuuki Enomoto &amp; Ken'ichi Fukamachi, <a href="./presentation/cif2017/main.pdf"> NetBSD Base System Packaging Using pkg_* Tools</a>, 18th Chitose International Forum, 2017</li>
-        <li>榎本優樹 &amp; 深町賢一, <a href="./presentation/jpnetbsdbof/2017/main.pdf"> Basepkgとその進み具合</a>,日本NetBSDユーザーグループ第十九回定期総会およびNetBSD BOF 2017</li>
-        <li>Yuuki Enomoto &amp; Ken'ichi Fukamachi, <a href="./presentation/asiabsdcon2017/main.pdf"> Maintain the NetBSD Base System Using pkg_* Tools</a>, AsiaBSDCon 2017</li>
-        <li>榎本優樹 &amp; 深町賢一 &amp; 青木広宙, <a href="./presentation/imec2016/main.pdf"> Intel RealSense カメラを用いた疑似力触覚体験システム</a>,第21回 知能メカトロニクスワークショップ, 2016</li>
-        <li>榎本優樹 &amp; 深町賢一, <a href="./presentation/fit2016/main.pdf"> Emmbedded NetBSD を生成するプログラムの展望</a>,
-          情報処理学会, FIT2016 第15回情報科学技術フォーラム, 2016</li>
-      </ul>
-    <h2 id="links">Links</h2>
-      <ul>
-        <li><a href="https://github.com/user340">GitHub</a></li>
-      </ul>
-    <h2 id="gnupg">GnuPG</h2>
-    <h3 id="publickey">Public Key</h3>
-    <pre><code>-----BEGIN PGP PUBLIC KEY BLOCK-----
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="./css/typesetting.css">
+<title>e-yuuki.org</title>
+</head>
+<body>
+<h1>e-yuuki.org</h1>
+<hr>
+<ul>
+<li><a href="#articles">Web Articles</a></li>
+<ul>
+<li><a href="#netbsd">NetBSD</a></li>
+<li><a href="#essay">Essay</a></li>
+</ul>
+<li><a href="#papers">Papers and Presentations</a></li>
+<li><a href="#links">Links</a></li>
+<li><a href="#gnupg">GnuPG</a></li>
+<ul>
+<li><a href="#publickey">Public Key</a></li>
+<li><a href="#fingerprint">Fingerprint</a></li>
+</ul>
+</ul>
+
+<h2 id="articles">Web Articles</h2>
+<h3 id="netbsd">NetBSD</h3>
+<ul>
+<li><a href="./netbsd/pkg_install.html">pkg_installについて</a></li>
+<li><a href="./netbsd/thinkpad.html">NetBSD on ThinkPad</a></li>
+<li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
+<li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
+</ul>
+
+<h3 id="essay">Essay</h3>
+<ul>
+<li><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></li>
+</ul>
+
+<h2 id="papers">Papers and Presentations</h2>
+<ul>
+<li>Yuuki Enomoto, <a href="./presentation/jpnetbsdbof/2018/main.pdf"> Progress of basepkg</a>,日本NetBSDユーザーグループ第二十回定期総会およびNetBSD BOF 2018</li>
+<li>Yuuki Enomoto &amp; Ken'ichi Fukamachi, <a href="./presentation/asiabsdcon2018/main.pdf"> Design, Implementation and Operation of NetBSD Base System Packaging</a>, AsiaBSDCon 2018</li>
+<li>榎本優樹, <a href="./presentation/master/main.pdf"> NetBSD 基本システムのパッケージ化の設計と実装</a>,千歳科学技術大学, 光科学研究科, 博士前期課程, 修士論文, 2018</li>
+<li>榎本優樹 &amp; 深町賢一, <a href="./presentation/ipsj-os2018/main.pdf"> NetBSD ベースシステムパッケージ化の実装報告</a>, 情報処理学会,システムソフトウェアとオペレーティング・システム研究会, 2018年2月研究会</li>
+<li>Yuuki Enomoto &amp; Ken'ichi Fukamachi, <a href="./presentation/cif2017/main.pdf"> NetBSD Base System Packaging Using pkg_* Tools</a>, 18th Chitose International Forum, 2017</li>
+<li>榎本優樹 &amp; 深町賢一, <a href="./presentation/jpnetbsdbof/2017/main.pdf"> Basepkgとその進み具合</a>,日本NetBSDユーザーグループ第十九回定期総会およびNetBSD BOF 2017</li>
+<li>Yuuki Enomoto &amp; Ken'ichi Fukamachi, <a href="./presentation/asiabsdcon2017/main.pdf"> Maintain the NetBSD Base System Using pkg_* Tools</a>, AsiaBSDCon 2017</li>
+<li>榎本優樹 &amp; 深町賢一 &amp; 青木広宙, <a href="./presentation/imec2016/main.pdf"> Intel RealSense カメラを用いた疑似力触覚体験システム</a>,第21回 知能メカトロニクスワークショップ, 2016</li>
+<li>榎本優樹 &amp; 深町賢一, <a href="./presentation/fit2016/main.pdf"> Emmbedded NetBSD を生成するプログラムの展望</a>,情報処理学会, FIT2016 第15回情報科学技術フォーラム, 2016</li>
+</ul>
+
+<h2 id="links">Links</h2>
+<ul>
+<li><a href="https://github.com/user340">GitHub</a></li>
+</ul>
+
+<h2 id="gnupg">GnuPG</h2>
+<h3 id="publickey">Public Key</h3>
+<pre><code>-----BEGIN PGP PUBLIC KEY BLOCK-----
 
 mQENBFpDZMQBCAC6Rs6wqlzFRf+Xw0QtKyV1GVgaX+0o38tDWw7ODKWKKg7/icQA
 oZdWDcHmr5j9fyHfJUgTq4L7b22kC+XkvXJ7zYMZhXAuK6EZ8ZAH/mu3xpMPyvoV
@@ -147,15 +150,16 @@ PWgAfkm1nr2deh0mU90RYPXehkP4RBP+uwBzgg==
 =hvwI
 -----END PGP PUBLIC KEY BLOCK-----
 </code></pre>
-    <p>またはpgp.mit.eduから取得できます。</p>
-    <h3 id="fingerprint">Fingerprint</h3>
-    <pre><code>B684 4BF2 9CD4 961F 510A  8121 7B4D FF44 2348 20B8</code></pre>
-    <hr>
-    <footer>
-      <address>
-        Yuuki Enomoto <a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>
-      </address>
-      <p><small>Copyright (C) 2015,2016,2017,2018 Yuuki Enomoto</small></p>
-    </footer>
-  </body>
+<p>またはpgp.mit.eduから取得できます。</p>
+
+<h3 id="fingerprint">Fingerprint</h3>
+<pre><code>B684 4BF2 9CD4 961F 510A  8121 7B4D FF44 2348 20B8</code></pre>
+<hr>
+<footer>
+<address>
+Yuuki Enomoto <a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>
+</address>
+<p><small>Copyright (C) 2015,2016,2017,2018 Yuuki Enomoto</small></p>
+</footer>
+</body>
 </html>
