--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 <h1>e-yuuki.org</h1>
 <hr>
 <ul>
-<li><a href="#articles">Web Articles</a></li>
+<li><a href="#articles">Web Articles</a>
 <ul>
 <li><a href="#netbsd">NetBSD</a></li>
 <li><a href="#essay">Essay</a></li>
 </ul>
+</li>
 <li><a href="#papers">Papers and Presentations</a></li>
 <li><a href="#links">Links</a></li>
-<li><a href="#gnupg">GnuPG</a></li>
+<li><a href="#gnupg">GnuPG</a>
 <ul>
 <li><a href="#publickey">Public Key</a></li>
 <li><a href="#fingerprint">Fingerprint</a></li>
 </ul>
+</li>
 </ul>
 
 <h2 id="articles">Web Articles</h2>
