--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -29,29 +29,39 @@
   </li>
   <li>管理者向けソフトウェア
     <ol>
-      <li>OpenSSH</li>
-      <li>pf</li>
-      <li>ClamAV&reg;</li>
+      <li><a href="./openssh.html">リモートログイン&mdash;&mdash;OpenSSH</a></li>
+      <li>ファイアウォール&mdash;&mdash;pf</li>
+      <li>アンチウイルス&mdash;&mdash;ClamAV&reg;</li>
     </ol>
   </li>
   <li>一般ユーザ向けソフトウェア
     <ol>
       <li>デスクトップ環境
         <ol>
-        <li>i3</li>
-        <li>rxvt-unicode</li>
-        <li>ibus-mozc</li>
-        <li>Ricty</li>
+        <li>ウィンドウマネージャ&mdash;&mdash;i3</li>
+        <li>仮想端末&mdash;&mdash;rxvt-unicode</li>
+        <li>端末多重化&mdash;&mdash;tmux</li>
+        <li>インプットメソッド&mdash;&mdash;ibus-mozc</li>
+        <li>日本語フォント&mdash;&mdash;Ricty</li>
         </ol>
       </li>
       <li>アプリケーション
         <ol>
-        <li>GnuPG</li>
-        <li>tmux</li>
-        <li>NeoMutt</li>
-        <li>w3m</li>
-        <li>Firefox</li>
-        <li>pwd.sh</li>
+        <li>Webブラウザ
+          <ol>
+            <li>CUI Webブラウザ&mdash;&mdash;w3m</li>
+            <li>GUI Webブラウザ&mdash;&mdash;Firefox</li>
+          </ol>
+        </li>
+        <li>メーラ
+          <ol><li>CUIメーラ&mdash;&mdash;NeoMutt</li></ol>
+        </li>
+        <li>暗号化・署名・パスワード管理
+          <ol>
+            <li>暗号化と署名&mdash;&mdash;GnuPG</li>
+            <li>パスワードマネージャ&mdash;&mdash;Purse</li>
+          </ol>
+        </li>
         </ol>
       </li>
     </ol>
