--- a/index.html
+++ b/index.html
@@ -62,100 +62,68 @@
 <h3 id="publickey">Public Key</h3>
 <pre><code>-----BEGIN PGP PUBLIC KEY BLOCK-----
 
-mQENBFpDZMQBCAC6Rs6wqlzFRf+Xw0QtKyV1GVgaX+0o38tDWw7ODKWKKg7/icQA
-oZdWDcHmr5j9fyHfJUgTq4L7b22kC+XkvXJ7zYMZhXAuK6EZ8ZAH/mu3xpMPyvoV
-zhdeBbaFhCF4Er3ti3GUTEU67SLPsPCxzpIz9J1D3yto+QkLP7IZeq27UMzNdQLp
-4g5bhtcHOsupBtbq9qgrfpvtNYbaYz51rORQeTPAURodjT+DcVh4+VJ6d8E/T7Q3
-KjmpL0nRrvIofBOPp7WwCrDl6OrgKP+lGqydXr1g+G6BE3rWwAMzzcdls/ZwQ9li
-M6IB7BP6Xpn16rwqYJbGFhPNETl/9jg82/X/ABEBAAGJAVEEIAEIADsWIQTvhIqO
-0cKpKr7rCQvirnFHwgkIdwUCW5nrch0dA1VwZGF0ZSBSU0EgYml0IDIwNDggdG8g
-NDA5NgAKCRDirnFHwgkId16YB/wJUkWKab4i/hvCGXWNgD1s7f9vJFxwyrHJ1Rwu
-VB98lHEOauFCCwzGgDqXcK0eIuh+kzXBciNNIewhMGsBGtnwKPM0thW/fCuDNoGz
-5fCO0z0WayBGTIil36dApmB7XK7cM/5szGvIQ6uj1CE0H42k/v2rsfiXeeOovoW7
-nCxEo9F0hcgvrUzTdL2RzPbYglxzVoUvRV/X1CmpMur03gyLQ27goEsLJAJoBFnV
-eLhQp2DDbfzixBmE5hvw3vGFA2AJY/a2kHIe+bLFh6ko30ChChnyh9oKpPpLtvzs
-EmvetFPxvPAXiGedhj6LTOSorp1x0FQ9TW87xtteNtyxI10AtB9ZdXVraSBFbm9t
-b3RvIDx1a2lAZS15dXVraS5vcmc+iQFUBBMBCAA+FiEE74SKjtHCqSq+6wkL4q5x
-R8IJCHcFAlpDZMQCGwMFCQPCZwAFCwkIBwIGFQgJCgsCBBYCAwECHgECF4AACgkQ
-4q5xR8IJCHdepAf+LKM5IQbA7LPSFFjlPt5riIwA6LPgnnyudf42AE/Yi3PCJKPE
-BeugIafevt9laLS9xTiyyuF4egzCZ0A1DucyZSd56iNw51xktKTnSTwwelh0Snig
-YRXgd0s9hzpwmiPoi2ZgZf8haT49HRHf/l9QidzVh2J8PgfFcQvEu7jFT9oqjba3
-1t1+G1WvQnawVNtGwk2d6cM+1B53ODsiSzCwAWymH58Vk6My/gUxa54uQIWFyrmt
-MiGUMMVqrWZ5TvT92fPjvsbgHQT8at/BhMWsp0l1TBjWPT8itUuJN3k7mz3oQ1P+
-6D3Ni9wsYjzWuUdkVLgYrNXrWz8744kAXDjCBrkBDQRaQ2TEAQgArkjisDET/9HV
-FINcvWH1XjSzk/bGzwSC9012lWXxLY+rQB0r2IEkrDafyTDWnC+Udiof4SJ+cnOA
-mL/x0hUFGJ0vPROckbOBfLAkpBBEPDbQpiHzpOvuWfme0cimdgFTpRoetKokjoBV
-XgxWYSc9rd/sFkTOPq7ilMTlIc5RUxiS71Y2zarLtUZQZKE0/Tld8bF3TDI+O6Tx
-/wR5j3FbbwJ9cdeeQLlM/1kjwzqGcj/5Wcjg0zaopnHDzuGwUQvuhGB0IL/io0mx
-mU/w5WXRrhoCLvavIUYqBY6iQplakHzgRygM7JM/M3yiSpyJ34o7u6AFVXw9YPRG
-nw6E1QodXQARAQABiQE8BBgBCAAmFiEE74SKjtHCqSq+6wkL4q5xR8IJCHcFAlpD
-ZMQCGwwFCQPCZwAACgkQ4q5xR8IJCHeRMQf+PBKK1/CbWA4vjD15kuT3Kv2HEndv
-hcK1sA+v9clnU5bsnnXxnCiCOeG8SDsfZe6t4mqDIukuv0qa4yrgbqOyu0tqdbeW
-u0rUF1r7Gcw4rgjvuErkETfP7nM0LtAf8BR5QLddL0Bt7jtnObd8W7CZ9t1hcVjq
-PdX/jMCk9FOc8nnhwn4BB4WT0GYgl0wsVIlNX9EnfVR6wUTusM7fDJLqgNvV6TlN
-BrUYmd7663O/H6NjZKYG21tfDC24xd/F4lYtEuhQp9CZMfyLoe5Mp1CBwNkWsvd6
-XaK9rhWDZajRn+LElQg2yEl3pfloociDN0ulqxpjfY9tWvsn1sr7bE5TwJkCDQRb
-melPARAA0cNYiAq0hgSG5COvtHfGpA4tgK37ffRpK4OZopGPwU/5VnyzTBWdYQpP
-Dh0uUGghFmD+d4AbDjox/+4P0Mzkns6iiQtGOeBIt78Mz0riUqaKgD7ZTFj8oVTN
-34aBKfC6MIivAZf35O8YdklHCk7SnuXVHE9D8lZ7mB9AE0Ug4ggBLan3uyX6VJAh
-DY3lElvBnpX4hkWEhB6aN1lzine2yCLE0TMN1QKGF4MEsjpsE0l4vVPunEBlujiC
-BztTet9HT3touY1u8fOYDpuggovdM9dgRD7ESFbRMAADOrNqYJLDwQMe12LRh+Ly
-QZx5dr2ptpYCPwOX5911KWmgptmvAhe+5boWd++yijbxpJuZYietBEMxQXGWdWC0
-CfI7Prf1jWnFynBQnS+7h8PB/v/m7JG0AVRWyrLxJrC9MPuAcT6H3YBACqdyNxuj
-AUDfImAo1bauLeNGDUHp1XrkcYUxZpNqd6IgkUySR+/0a65N0RMaz16U0KB6iYGf
-Zxj/dt7Fx/Xc3f4JjN6/y+QwlHWBWltRb8cp3TlKMDi8h6WgUXH4H2VP+GB5F+zx
-2TdcgXUK7lwbv6UO27t01qz0tGUZWNl47YDxVHyQUkPiX2IsxD0fmUgjXYRIM9gF
-OEt7/sNWt6ATMCB7vdvbolqd935+kqt6SXwaPEnDyWKqhXybx4EAEQEAAbQvWXV1
-a2kgRW5vbW90byAoSXQgaXMgbmV3IGtleSkgPHVraUBlLXl1dWtpLm9yZz6JAk4E
-EwEIADgWIQS2hEvynNSWH1EKgSF7Tf9EI0gguAUCW5npTwIbAwULCQgHAgYVCgkI
-CwIEFgIDAQIeAQIXgAAKCRB7Tf9EI0gguEOMD/9CGoM/LkS0IUye2ZP7s6LT/i1A
-C9N2EFCY+qERnTrL5kRafBj+7u0zC2MmEUW+g454DvMRIVDmmV4GfimhYgICAseB
-bNXkDJPYr5OB/4KIA6TMQZ8jfgVyImIjYtMvno0eQjN9URvkzvBQ1j7Xjc7bEuY6
-EfFRDJX/zi3XYqvCy206JS/Tk1QZqDO7PF95k7qzG8SKl2MNtu11RealwAos5+6Y
-6Kqn4jDRq4wubTS9yvOSTyOIrg240bse3RCa4nUvcEIbecLw8+T4EDdTmP4ZBnWf
-cGakANamkUH22JIDNOwym+FLEsWPGQe1cdYYl0KvTo2XJMrz/9zo7Uej9Zv2lVDn
-K8NPBkcA2Jm1IEU96x4GfMO8xpZIgvw7VkQCNmo3DYRJ2hKW1Hd4Dh5ZdIUz5+l3
-EHq/YByqqahUwlRuXM/ymFmNKWXIS/bWAm9TFs5mJa6GG9Yqs60UKZ86ZdDswT0f
-q1B2k5GfFmj3NVqzyD6p2f3ktJJKDKAiuQANRsmZxgrYlcS+SZ/Zno0D4AsqxiLT
-c5FsxJx1oAYUDA4YcxKlCngJpRmqwn7Xuq5jeo/rfG6iHtTlv2UrLvQHsr0dUjBx
-bwPRer+zCfGGUn9MT2XYrmm8tGNtD+fRtMkkTbKRc8zIKFkB8YptkWxAm8IiK6WD
-cljb3PrpeYq+3xgr2IkBMwQQAQgAHRYhBO+Eio7RwqkqvusJC+KucUfCCQh3BQJb
-meqAAAoJEOKucUfCCQh3Cz8IAJikfki8fGxgEqTOcbCTEQKVCXb4IDlVMUmg/+rq
-thbOysg9KB6ZcJmyhDt2V/7cVRyXn0jyJgDYbg9q7n2yDNV3OPrGOu7hBVvGr0br
-dDZOhPFZwWIATuyjX73P5pOYN6Gavf7Zb2B2XVFqKXqY8Oqvz0eOPwi8bIVxbAlH
-pwO+E/4EEgENwqghL4COdAFGdlr1rwzdSUAXWVyJ8wDxOOjtG61foHs1BbAYczwC
-4SgU4mPukxC9mcUM+QIa+kivFl4JjKHq+pbRCefuTWRLEKTPBmWSeFz2+K4dxS0R
-uIrN43ALTG7jfvjhLYrSbyHauokMvI/ErwXmuJK2h3aZ6xW5Ag0EW5npTwEQALeZ
-cXyBUExpn38o3ybfEbhfBsnUjQTZCJGZL5ULBRrWYWT0gWIWqGDXEIW/tVgXVQhp
-UHL/zDZCRw4ADsRG7WvNEmaW/2v0kzTm6qkIWqJfsajTe6tY+zHDi8WMe4RBd14L
-yNGcVHeAekvGwDT6uBUpXW0JEfKqgQR4Zjs2BDV/CQclUMVj21Ve6ohzkFSjc/Ix
-h9O9cZt7NV72VSaylY3d+OBcMoz9QHxwjVwLnV/iaONmnGCVuEYPZg7/WWO0c7cm
-yc1ttKIDku+gtWokVJN2QlT778l/SalFNNv94g9i1u4ZmWAPxEJZH7slIiQjuRaQ
-l1Fy41BDxXnWfjgqi1WmVDr/IXvJEcqfCi5ZrlNDskCMS/zqgQZ2k7hCmBljKHrJ
-Mh1eNl/TRyCMV2SaYENxRydFRm4jkTPGiL3cotPzcn9s5GNtbe4RcFpa2Vuo3+aR
-t2UGnLiSGb73PT2Qv4F5EnyS55dwFbXO4c72Pwznh1mLLi/SkHYQnUxF8hqJG+Fi
-FaCdu8uEFdpGcU9bYNoRIez8rTRpve//u1uvUSsSju7K6kk1mPfhtNQAdNOWD7t3
-/ZPxitS8icIoHPlKQkKEBZtaiCb0JYvX5CAff2NIy+4rHYZpIzbCKgBX8SC9VB/q
-mEVv6PfTeeNHOurjjFD4kiptaSQPldyxluLWQbA5ABEBAAGJAjYEGAEIACAWIQS2
-hEvynNSWH1EKgSF7Tf9EI0gguAUCW5npTwIbDAAKCRB7Tf9EI0gguHZPEACiGBOg
-0jc5Hh7hSouc6a8GSVmMk3oiHJiwtxsnaJr4VkZeJtuOlUrrQczwfwlhsI6bZlnd
-ecQsq5ooHjO5BkB4SgT6Ku3q8cTs//Vf+AxKIgLKQOZBEr+n/+1QMJvACyNOsLD2
-c7TZIVXkVTQJ6aEogM6eIWDZcXRuLEBlSPT4wWAKAcgsMBBy899dx2JEpe89QFtx
-f6ksQhIPWN8JGKE3wqx3e59gx+jAKd4xjUOkbIWxJ/RetqHizyj71BBDFPVNhlqu
-wAePn4iFBxXz6w1VJVzolDDnna7CCCKsBHsVsUxgUTPkJG0HFrtNGIMTA7tku7g/
-QXJVc5H/7kWWUspsGs8jf4cn43+mzYR312Rq3TlCoBL3yvalAfwcrCzNwFzjWpwF
-UW8CVkKB2AG9+Q8W6EdVWHxCXk1Gl/QsRQPHdYvQK534oPkhFvAB6kp2yT6/gvfQ
-8p3Ua+8hcvqt0g8Y53lOlTm0EGckUofLkCovJ9ML8cmqmdZYQE6KnG3jAoaY98aI
-NLKTAjMAW0cQpSaS/gXksDi/x+8m4jyJo9VaVfjU8Cyf2/jwP9Fl3lnN7FMqTXe0
-2d7nK3T1pRIqg2+3JIA9kX/oTCxRdxQ/h61Ga6dFoFxipE8ihkclVE3KWBMAoX6h
-PWgAfkm1nr2deh0mU90RYPXehkP4RBP+uwBzgg==
-=hvwI
+mQINBFuZ6U8BEADRw1iICrSGBIbkI6+0d8akDi2Arft99Gkrg5mikY/BT/lWfLNM
+FZ1hCk8OHS5QaCEWYP53gBsOOjH/7g/QzOSezqKJC0Y54Ei3vwzPSuJSpoqAPtlM
+WPyhVM3fhoEp8LowiK8Bl/fk7xh2SUcKTtKe5dUcT0PyVnuYH0ATRSDiCAEtqfe7
+JfpUkCENjeUSW8GelfiGRYSEHpo3WXOKd7bIIsTRMw3VAoYXgwSyOmwTSXi9U+6c
+QGW6OIIHO1N630dPe2i5jW7x85gOm6CCi90z12BEPsRIVtEwAAM6s2pgksPBAx7X
+YtGH4vJBnHl2vam2lgI/A5fn3XUpaaCm2a8CF77luhZ377KKNvGkm5liJ60EQzFB
+cZZ1YLQJ8js+t/WNacXKcFCdL7uHw8H+/+bskbQBVFbKsvEmsL0w+4BxPofdgEAK
+p3I3G6MBQN8iYCjVtq4t40YNQenVeuRxhTFmk2p3oiCRTJJH7/Rrrk3RExrPXpTQ
+oHqJgZ9nGP923sXH9dzd/gmM3r/L5DCUdYFaW1FvxyndOUowOLyHpaBRcfgfZU/4
+YHkX7PHZN1yBdQruXBu/pQ7bu3TWrPS0ZRlY2XjtgPFUfJBSQ+JfYizEPR+ZSCNd
+hEgz2AU4S3v+w1a3oBMwIHu929uiWp33fn6Sq3pJfBo8ScPJYqqFfJvHgQARAQAB
+tC9ZdXVraSBFbm9tb3RvIChJdCBpcyBuZXcga2V5KSA8dWtpQGUteXV1a2kub3Jn
+PokCTgQTAQgAOBYhBLaES/Kc1JYfUQqBIXtN/0QjSCC4BQJbmelPAhsDBQsJCAcC
+BhUKCQgLAgQWAgMBAh4BAheAAAoJEHtN/0QjSCC4Q4wP/0Iagz8uRLQhTJ7Zk/uz
+otP+LUAL03YQUJj6oRGdOsvmRFp8GP7u7TMLYyYRRb6DjngO8xEhUOaZXgZ+KaFi
+AgICx4Fs1eQMk9ivk4H/gogDpMxBnyN+BXIiYiNi0y+ejR5CM31RG+TO8FDWPteN
+ztsS5joR8VEMlf/OLddiq8LLbTolL9OTVBmoM7s8X3mTurMbxIqXYw227XVF5qXA
+Cizn7pjoqqfiMNGrjC5tNL3K85JPI4iuDbjRux7dEJridS9wQht5wvDz5PgQN1OY
+/hkGdZ9wZqQA1qaRQfbYkgM07DKb4UsSxY8ZB7Vx1hiXQq9OjZckyvP/3OjtR6P1
+m/aVUOcrw08GRwDYmbUgRT3rHgZ8w7zGlkiC/DtWRAI2ajcNhEnaEpbUd3gOHll0
+hTPn6XcQer9gHKqpqFTCVG5cz/KYWY0pZchL9tYCb1MWzmYlroYb1iqzrRQpnzpl
+0OzBPR+rUHaTkZ8WaPc1WrPIPqnZ/eS0kkoMoCK5AA1GyZnGCtiVxL5Jn9mejQPg
+CyrGItNzkWzEnHWgBhQMDhhzEqUKeAmlGarCfte6rmN6j+t8bqIe1OW/ZSsu9Aey
+vR1SMHFvA9F6v7MJ8YZSf0xPZdiuaby0Y20P59G0ySRNspFzzMgoWQHxim2RbECb
+wiIrpYNyWNvc+ul5ir7fGCvYiQEzBBABCAAdFiEE74SKjtHCqSq+6wkL4q5xR8IJ
+CHcFAluZ6oAACgkQ4q5xR8IJCHcLPwgAmKR+SLx8bGASpM5xsJMRApUJdvggOVUx
+SaD/6uq2Fs7KyD0oHplwmbKEO3ZX/txVHJefSPImANhuD2rufbIM1Xc4+sY67uEF
+W8avRut0Nk6E8VnBYgBO7KNfvc/mk5g3oZq9/tlvYHZdUWopepjw6q/PR44/CLxs
+hXFsCUenA74T/gQSAQ3CqCEvgI50AUZ2WvWvDN1JQBdZXInzAPE46O0brV+gezUF
+sBhzPALhKBTiY+6TEL2ZxQz5Ahr6SK8WXgmMoer6ltEJ5+5NZEsQpM8GZZJ4XPb4
+rh3FLRG4is3jcAtMbuN++OEtitJvIdq6iQy8j8SvBea4kraHdpnrFbkCDQRbmelP
+ARAAt5lxfIFQTGmffyjfJt8RuF8GydSNBNkIkZkvlQsFGtZhZPSBYhaoYNcQhb+1
+WBdVCGlQcv/MNkJHDgAOxEbta80SZpb/a/STNObqqQhaol+xqNN7q1j7McOLxYx7
+hEF3XgvI0ZxUd4B6S8bANPq4FSldbQkR8qqBBHhmOzYENX8JByVQxWPbVV7qiHOQ
+VKNz8jGH071xm3s1XvZVJrKVjd344FwyjP1AfHCNXAudX+Jo42acYJW4Rg9mDv9Z
+Y7RztybJzW20ogOS76C1aiRUk3ZCVPvvyX9JqUU02/3iD2LW7hmZYA/EQlkfuyUi
+JCO5FpCXUXLjUEPFedZ+OCqLVaZUOv8he8kRyp8KLlmuU0OyQIxL/OqBBnaTuEKY
+GWMoeskyHV42X9NHIIxXZJpgQ3FHJ0VGbiORM8aIvdyi0/Nyf2zkY21t7hFwWlrZ
+W6jf5pG3ZQacuJIZvvc9PZC/gXkSfJLnl3AVtc7hzvY/DOeHWYsuL9KQdhCdTEXy
+Gokb4WIVoJ27y4QV2kZxT1tg2hEh7PytNGm97/+7W69RKxKO7srqSTWY9+G01AB0
+05YPu3f9k/GK1LyJwigc+UpCQoQFm1qIJvQli9fkIB9/Y0jL7isdhmkjNsIqAFfx
+IL1UH+qYRW/o99N540c66uOMUPiSKm1pJA+V3LGW4tZBsDkAEQEAAYkCNgQYAQgA
+IBYhBLaES/Kc1JYfUQqBIXtN/0QjSCC4BQJbmelPAhsMAAoJEHtN/0QjSCC4dk8Q
+AKIYE6DSNzkeHuFKi5zprwZJWYyTeiIcmLC3GydomvhWRl4m246VSutBzPB/CWGw
+jptmWd15xCyrmigeM7kGQHhKBPoq7erxxOz/9V/4DEoiAspA5kESv6f/7VAwm8AL
+I06wsPZztNkhVeRVNAnpoSiAzp4hYNlxdG4sQGVI9PjBYAoByCwwEHLz313HYkSl
+7z1AW3F/qSxCEg9Y3wkYoTfCrHd7n2DH6MAp3jGNQ6RshbEn9F62oeLPKPvUEEMU
+9U2GWq7AB4+fiIUHFfPrDVUlXOiUMOedrsIIIqwEexWxTGBRM+QkbQcWu00YgxMD
+u2S7uD9BclVzkf/uRZZSymwazyN/hyfjf6bNhHfXZGrdOUKgEvfK9qUB/BysLM3A
+XONanAVRbwJWQoHYAb35DxboR1VYfEJeTUaX9CxFA8d1i9Arnfig+SEW8AHqSnbJ
+Pr+C99DyndRr7yFy+q3SDxjneU6VObQQZyRSh8uQKi8n0wvxyaqZ1lhAToqcbeMC
+hpj3xog0spMCMwBbRxClJpL+BeSwOL/H7ybiPImj1VpV+NTwLJ/b+PA/0WXeWc3s
+UypNd7TZ3ucrdPWlEiqDb7ckgD2Rf+hMLFF3FD+HrUZrp0WgXGKkTyKGRyVUTcpY
+EwChfqE9aAB+SbWevZ16HSZT3RFg9d6GQ/hEE/67AHOC
+=RsdV
+
 -----END PGP PUBLIC KEY BLOCK-----
 </code></pre>
 <p>またはpgp.mit.eduから取得できます。</p>
 
 <h3 id="fingerprint">Fingerprint</h3>
-<pre><code>B684 4BF2 9CD4 961F 510A  8121 7B4D FF44 2348 20B8</code></pre>
+<pre><code>0E7C 81B7 4DD3 7084 C986  F089 9849 8A51 291D 2F65</code></pre>
 <hr>
 <footer>
 <address>
