--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
 </li>
 <li><a href="#papers">Papers and Presentations</a></li>
 <li><a href="#links">Links</a></li>
-<li><a href="#gnupg">GnuPG</a>
-<ul>
-<li><a href="#publickey">Public Key</a></li>
-<li><a href="#fingerprint">Fingerprint</a></li>
+<li><a href="#fingerprint">Fingerprint</a>
 </ul>
 </li>
 </ul>
@@ -58,72 +55,8 @@
 <li><a href="https://github.com/user340">GitHub</a></li>
 </ul>
 
-<h2 id="gnupg">GnuPG</h2>
-<h3 id="publickey">Public Key</h3>
-<pre><code>-----BEGIN PGP PUBLIC KEY BLOCK-----
-
-mQINBFuZ6U8BEADRw1iICrSGBIbkI6+0d8akDi2Arft99Gkrg5mikY/BT/lWfLNM
-FZ1hCk8OHS5QaCEWYP53gBsOOjH/7g/QzOSezqKJC0Y54Ei3vwzPSuJSpoqAPtlM
-WPyhVM3fhoEp8LowiK8Bl/fk7xh2SUcKTtKe5dUcT0PyVnuYH0ATRSDiCAEtqfe7
-JfpUkCENjeUSW8GelfiGRYSEHpo3WXOKd7bIIsTRMw3VAoYXgwSyOmwTSXi9U+6c
-QGW6OIIHO1N630dPe2i5jW7x85gOm6CCi90z12BEPsRIVtEwAAM6s2pgksPBAx7X
-YtGH4vJBnHl2vam2lgI/A5fn3XUpaaCm2a8CF77luhZ377KKNvGkm5liJ60EQzFB
-cZZ1YLQJ8js+t/WNacXKcFCdL7uHw8H+/+bskbQBVFbKsvEmsL0w+4BxPofdgEAK
-p3I3G6MBQN8iYCjVtq4t40YNQenVeuRxhTFmk2p3oiCRTJJH7/Rrrk3RExrPXpTQ
-oHqJgZ9nGP923sXH9dzd/gmM3r/L5DCUdYFaW1FvxyndOUowOLyHpaBRcfgfZU/4
-YHkX7PHZN1yBdQruXBu/pQ7bu3TWrPS0ZRlY2XjtgPFUfJBSQ+JfYizEPR+ZSCNd
-hEgz2AU4S3v+w1a3oBMwIHu929uiWp33fn6Sq3pJfBo8ScPJYqqFfJvHgQARAQAB
-tC9ZdXVraSBFbm9tb3RvIChJdCBpcyBuZXcga2V5KSA8dWtpQGUteXV1a2kub3Jn
-PokCTgQTAQgAOBYhBLaES/Kc1JYfUQqBIXtN/0QjSCC4BQJbmelPAhsDBQsJCAcC
-BhUKCQgLAgQWAgMBAh4BAheAAAoJEHtN/0QjSCC4Q4wP/0Iagz8uRLQhTJ7Zk/uz
-otP+LUAL03YQUJj6oRGdOsvmRFp8GP7u7TMLYyYRRb6DjngO8xEhUOaZXgZ+KaFi
-AgICx4Fs1eQMk9ivk4H/gogDpMxBnyN+BXIiYiNi0y+ejR5CM31RG+TO8FDWPteN
-ztsS5joR8VEMlf/OLddiq8LLbTolL9OTVBmoM7s8X3mTurMbxIqXYw227XVF5qXA
-Cizn7pjoqqfiMNGrjC5tNL3K85JPI4iuDbjRux7dEJridS9wQht5wvDz5PgQN1OY
-/hkGdZ9wZqQA1qaRQfbYkgM07DKb4UsSxY8ZB7Vx1hiXQq9OjZckyvP/3OjtR6P1
-m/aVUOcrw08GRwDYmbUgRT3rHgZ8w7zGlkiC/DtWRAI2ajcNhEnaEpbUd3gOHll0
-hTPn6XcQer9gHKqpqFTCVG5cz/KYWY0pZchL9tYCb1MWzmYlroYb1iqzrRQpnzpl
-0OzBPR+rUHaTkZ8WaPc1WrPIPqnZ/eS0kkoMoCK5AA1GyZnGCtiVxL5Jn9mejQPg
-CyrGItNzkWzEnHWgBhQMDhhzEqUKeAmlGarCfte6rmN6j+t8bqIe1OW/ZSsu9Aey
-vR1SMHFvA9F6v7MJ8YZSf0xPZdiuaby0Y20P59G0ySRNspFzzMgoWQHxim2RbECb
-wiIrpYNyWNvc+ul5ir7fGCvYiQEzBBABCAAdFiEE74SKjtHCqSq+6wkL4q5xR8IJ
-CHcFAluZ6oAACgkQ4q5xR8IJCHcLPwgAmKR+SLx8bGASpM5xsJMRApUJdvggOVUx
-SaD/6uq2Fs7KyD0oHplwmbKEO3ZX/txVHJefSPImANhuD2rufbIM1Xc4+sY67uEF
-W8avRut0Nk6E8VnBYgBO7KNfvc/mk5g3oZq9/tlvYHZdUWopepjw6q/PR44/CLxs
-hXFsCUenA74T/gQSAQ3CqCEvgI50AUZ2WvWvDN1JQBdZXInzAPE46O0brV+gezUF
-sBhzPALhKBTiY+6TEL2ZxQz5Ahr6SK8WXgmMoer6ltEJ5+5NZEsQpM8GZZJ4XPb4
-rh3FLRG4is3jcAtMbuN++OEtitJvIdq6iQy8j8SvBea4kraHdpnrFbkCDQRbmelP
-ARAAt5lxfIFQTGmffyjfJt8RuF8GydSNBNkIkZkvlQsFGtZhZPSBYhaoYNcQhb+1
-WBdVCGlQcv/MNkJHDgAOxEbta80SZpb/a/STNObqqQhaol+xqNN7q1j7McOLxYx7
-hEF3XgvI0ZxUd4B6S8bANPq4FSldbQkR8qqBBHhmOzYENX8JByVQxWPbVV7qiHOQ
-VKNz8jGH071xm3s1XvZVJrKVjd344FwyjP1AfHCNXAudX+Jo42acYJW4Rg9mDv9Z
-Y7RztybJzW20ogOS76C1aiRUk3ZCVPvvyX9JqUU02/3iD2LW7hmZYA/EQlkfuyUi
-JCO5FpCXUXLjUEPFedZ+OCqLVaZUOv8he8kRyp8KLlmuU0OyQIxL/OqBBnaTuEKY
-GWMoeskyHV42X9NHIIxXZJpgQ3FHJ0VGbiORM8aIvdyi0/Nyf2zkY21t7hFwWlrZ
-W6jf5pG3ZQacuJIZvvc9PZC/gXkSfJLnl3AVtc7hzvY/DOeHWYsuL9KQdhCdTEXy
-Gokb4WIVoJ27y4QV2kZxT1tg2hEh7PytNGm97/+7W69RKxKO7srqSTWY9+G01AB0
-05YPu3f9k/GK1LyJwigc+UpCQoQFm1qIJvQli9fkIB9/Y0jL7isdhmkjNsIqAFfx
-IL1UH+qYRW/o99N540c66uOMUPiSKm1pJA+V3LGW4tZBsDkAEQEAAYkCNgQYAQgA
-IBYhBLaES/Kc1JYfUQqBIXtN/0QjSCC4BQJbmelPAhsMAAoJEHtN/0QjSCC4dk8Q
-AKIYE6DSNzkeHuFKi5zprwZJWYyTeiIcmLC3GydomvhWRl4m246VSutBzPB/CWGw
-jptmWd15xCyrmigeM7kGQHhKBPoq7erxxOz/9V/4DEoiAspA5kESv6f/7VAwm8AL
-I06wsPZztNkhVeRVNAnpoSiAzp4hYNlxdG4sQGVI9PjBYAoByCwwEHLz313HYkSl
-7z1AW3F/qSxCEg9Y3wkYoTfCrHd7n2DH6MAp3jGNQ6RshbEn9F62oeLPKPvUEEMU
-9U2GWq7AB4+fiIUHFfPrDVUlXOiUMOedrsIIIqwEexWxTGBRM+QkbQcWu00YgxMD
-u2S7uD9BclVzkf/uRZZSymwazyN/hyfjf6bNhHfXZGrdOUKgEvfK9qUB/BysLM3A
-XONanAVRbwJWQoHYAb35DxboR1VYfEJeTUaX9CxFA8d1i9Arnfig+SEW8AHqSnbJ
-Pr+C99DyndRr7yFy+q3SDxjneU6VObQQZyRSh8uQKi8n0wvxyaqZ1lhAToqcbeMC
-hpj3xog0spMCMwBbRxClJpL+BeSwOL/H7ybiPImj1VpV+NTwLJ/b+PA/0WXeWc3s
-UypNd7TZ3ucrdPWlEiqDb7ckgD2Rf+hMLFF3FD+HrUZrp0WgXGKkTyKGRyVUTcpY
-EwChfqE9aAB+SbWevZ16HSZT3RFg9d6GQ/hEE/67AHOC
-=RsdV
-
------END PGP PUBLIC KEY BLOCK-----
-</code></pre>
-<p>またはpgp.mit.eduから取得できます。</p>
-
-<h3 id="fingerprint">Fingerprint</h3>
-<pre><code>0E7C 81B7 4DD3 7084 C986  F089 9849 8A51 291D 2F65</code></pre>
+<h2 id="fingerprint">Fingerprint</h2>
+<pre><code>B684 4BF2 9CD4 961F 510A  8121 7B4D FF44 2348 20B8</code></pre>
 <hr>
 <footer>
 <address>
