--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 
 <h2 id="links">Links</h2>
 <ul>
-<li><a href="https://github.com/user340">GitHub</a></li>
+<li>GitHub, <a href="https://github.com/user340">github.com/user340</a></li>
+<li>Amazon, <a href="http://amzn.asia/8Dd8gHg">Wish List</a></li>
 </ul>
 
 <h2 id="fingerprint">Fingerprint</h2>
